objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Axle_Configuration__c</fullName>
        <description>Axle Configuration</description>
        <inlineHelpText>Axle Configuration</inlineHelpText>
        <label>Axle Configuration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Volvo</fullName>
                </value>
                <value>
                    <fullName>Mack</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buying_Customer_ID__c</fullName>
        <description>Source Field: OWN_CUST_ID [IDCUST_BUY]</description>
        <label>Buying Customer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buying_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Buying Customer</description>
        <label>Buying Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Buying Customer</relationshipLabel>
        <relationshipName>Buying_Customer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTD_Id__c</fullName>
        <label>CTD Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cab__c</fullName>
        <label>Cab</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chassis_ID__c</fullName>
        <formula>Chassis_Series__c + &quot; &quot; +  Chassis_Number__c</formula>
        <label>Chassis ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chassis_Number__c</fullName>
        <description>Source Field: CHASSIS_NUM [IDCHASNR]</description>
        <label>Chassis Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chassis_Series__c</fullName>
        <description>Source Field: CHASSIS_SERIE [IDCHNRS]</description>
        <label>Chassis Series</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_Operation__c</fullName>
        <label>Country of Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>CAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <description>Source Field: DELIVERY_DATE Delivery Date [TILEV_VAGNKUND]</description>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engine_Liters__c</fullName>
        <description>Engine Liters</description>
        <inlineHelpText>Engine Liters</inlineHelpText>
        <label>Engine Liters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_Manufacturer__c</fullName>
        <description>Engine Manufacturer</description>
        <inlineHelpText>Engine Manufacturer</inlineHelpText>
        <label>Engine Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_Model__c</fullName>
        <description>Engine Model</description>
        <inlineHelpText>Engine Model</inlineHelpText>
        <label>Engine Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_Type__c</fullName>
        <description>Engine Type</description>
        <inlineHelpText>Engine Type</inlineHelpText>
        <label>Engine Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Front_Axle__c</fullName>
        <description>Front Axle</description>
        <inlineHelpText>Front Axle</inlineHelpText>
        <label>Front Axle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fuel__c</fullName>
        <description>Fuel</description>
        <inlineHelpText>Fuel</inlineHelpText>
        <label>Fuel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Liters_Size_Over_Under__c</fullName>
        <description>Liters Size Over Under</description>
        <inlineHelpText>Liters Size Over Under</inlineHelpText>
        <label>Liters Size Over Under</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer_GVW_Class__c</fullName>
        <description>Manufacturer GVW Class</description>
        <inlineHelpText>Manufacturer GVW Class</inlineHelpText>
        <label>Manufacturer GVW Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Type__c</fullName>
        <description>Source Field: [BEMRKTYP]</description>
        <label>Marketing Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Year__c</fullName>
        <description>Model Year</description>
        <inlineHelpText>Model Year</inlineHelpText>
        <label>Model Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OEM__c</fullName>
        <label>OEM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Volvo</fullName>
                </value>
                <value>
                    <fullName>Mack</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rear_Axle__c</fullName>
        <description>Rear Axle</description>
        <inlineHelpText>Rear Axle</inlineHelpText>
        <label>Rear Axle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Month__c</fullName>
        <description>Report Month</description>
        <inlineHelpText>Report Month</inlineHelpText>
        <label>Report Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Year__c</fullName>
        <description>Report Year</description>
        <inlineHelpText>Report Year</inlineHelpText>
        <label>Report Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Date__c</fullName>
        <label>Retail Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Segment_No_Liters__c</fullName>
        <description>Segment No Liters</description>
        <inlineHelpText>Segment No Liters</inlineHelpText>
        <label>Segment No Liters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>Segment</description>
        <inlineHelpText>Segment</inlineHelpText>
        <label>Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller_Dealer_CTDI_ID__c</fullName>
        <label>Seller Dealer CTDI ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller_Dealer_Code__c</fullName>
        <externalId>true</externalId>
        <label>Seller Dealer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Dealer_CTDI_ID__c</fullName>
        <description>Source Field: SHIP_2_DLR CODE [IDAF_SHIP]</description>
        <label>Ship To Dealer CTDI ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Dealer_Code__c</fullName>
        <description>Ship To Dealer Code</description>
        <label>Ship To Dealer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ship To Dealer</description>
        <label>Ship To Dealer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ship To Dealer (VDA Assets)</relationshipLabel>
        <relationshipName>Ship_To_Dealer_VDA_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Number__c</fullName>
        <description>Source Field: UNIT_NUM [UNIT_NUM_VTNA]</description>
        <label>Unit Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Using_Customer_ID__c</fullName>
        <description>Source Field: USE_CUST_ID [IDCUST_USER]</description>
        <label>Using Customer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VDA_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VDA Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VDA_Last_Updated_On__c</fullName>
        <label>Last Updated On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <externalId>true</externalId>
        <label>VIN</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vehicle_Make_Model__c</fullName>
        <description>Vehicle Make Model</description>
        <inlineHelpText>Vehicle Make Model</inlineHelpText>
        <label>Vehicle Make Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Make__c</fullName>
        <description>Vehicle Make</description>
        <inlineHelpText>Vehicle Make</inlineHelpText>
        <label>Vehicle Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model__c</fullName>
        <description>Vehicle Model</description>
        <inlineHelpText>Vehicle Model</inlineHelpText>
        <label>Vehicle Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Type__c</fullName>
        <description>Vehicle Type</description>
        <inlineHelpText>Vehicle Type</inlineHelpText>
        <label>Vehicle Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Assets_by_Selling_Dealer</fullName>
        <columns>ASSET.NAME</columns>
        <columns>VIN__c</columns>
        <columns>Segment__c</columns>
        <columns>Vehicle_Model__c</columns>
        <columns>Retail_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Assets by Selling Dealer</label>
        <language>en_US</language>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Purchase_Date_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( PurchaseDate )</errorConditionFormula>
        <errorDisplayField>PurchaseDate</errorDisplayField>
        <errorMessage>Purchase Date is Required</errorMessage>
    </validationRules>
</CustomObject>